--- a/Lab2/Writeup.tex
+++ b/Lab2/Writeup.tex
@@ -38,8 +38,19 @@
 		\begin{equation}
 			\beta = 2\pi f\sqrt{\mu\varepsilon}
 		\end{equation}
-		Using the result from problem 2, Eq. 3, and $\mu = 4\pi\times 10^-7 H/m$, the calculated $\beta$ is $8.489\times 10^6$.
+		\begin{equation}
+			\varepsilon = \varepsilon_0\varepsilon_r
+		\end{equation}
+		Using the result from problem 2, Eq. 3 and 4, $\varepsilon_0 = 8.85\times 10^{-12}$ $F/m$ and $\mu = \mu_0 = 4\pi\times 10^-7$ $H/m$, the calculated $\beta$ is $25.256$.
 	\item
+		\begin{equation}
+			\begin{cases} 
+				Z_0 = \sqrt{\dfrac{L}{C}} \\
+				\sqrt{\mu\varepsilon} = \sqrt{LC}
+			\end{cases}
+		\end{equation}
+		Since $Z_0 = 50 \Omega$, solving the system of equations results in $C = 1.00\times 10^{-10}$ $F$ and $L = 2.51\times 10^{-7}$ $H$.		
+		
 \end{enumerate}
 
 \subsection{Questions}
@@ -62,7 +73,7 @@
 
 \subsection{Questions}
 \begin{enumerate}
-	\item If a lossy line is infinite in length, any power sent down the line would be absorbed by the line, that is, no power would be reflected back. Using Eq. XXX, 
+	\item If a lossy line is infinite in length, any power sent down the line would be absorbed by the line, that is, no power would be reflected back. Using Eq. 6, 
 	\begin{equation}
 		P_{av}^r = -\vert\Gamma\vert^2 \frac{\vert V_0^+\vert^2}{2Z_0}
 	\end{equation}
