--- a/Lab2/Writeup.tex
+++ b/Lab2/Writeup.tex
@@ -67,8 +67,8 @@
 
 \subsection{Analysis}
 \begin{enumerate}
-	\item The display appears to be a couple of circles with a constant $\vert\Gamma\vert\approx 1$. They are relatively stationary in their position on the Smith Chart, with no sprial pattern.
-	\item The display appears to be a pattern spiraling inwards with $\vert\Gamma\vert$ starting around 0.5 and constantly decreasing as the frequency increases. This is because the line is lossy, which means some power is absorbed by the line. Thus, by electrically increasing the length of the line, more and more power will be absorbed by the line, reducing the amount of reflected power and $\vert\Gamma\vert$
+	\item The display appears to be a couple of overlapping circles with a constant $\vert\Gamma\vert\approx 1$. They are relatively stationary in their position on the Smith Chart, with no spiral pattern.
+	\item The display appears to be a pattern spiralling inwards with $\vert\Gamma\vert$ starting around 0.5 and constantly decreasing as the frequency increases. This is because the line is lossy, which means some power is absorbed by the line. Thus, by electrically increasing the length of the line, more and more power will be absorbed by the line, reducing the amount of reflected power and $\vert\Gamma\vert$
 \end{enumerate}
 
 \subsection{Questions}
