--- a/Cheatsheet/320Cheetsheet.tex
+++ b/Cheatsheet/320Cheetsheet.tex
@@ -91,12 +91,17 @@
      \Large{\textbf{EECS 320 Cheat Sheet}} \\
 \end{center}
 
-\section{Constants}
-\begin{tabular}{@{}ll@{}}
-$q$              & $1.6 \times 10^{-19}$ C\\
-$\varepsilon_0$  & $8.854 \times 10^{-12}$ F/m\\
-$\mu_0$          & $4\pi\times 10^{-7}$ H/m \\
-\end{tabular}
+\section{Chapter 5}
+$\xi = -\dfrac{dV}{dx}$ \\
+$V_{bi} = \dfrac{kT}{q}ln(\dfrac{N_AN_D}{n_i^2})$
+\subsection{Poisson's Equation}
+\begin{equation}
+	\dfrac{d\xi}{dx} \cong
+	\begin{cases}
+	\dfrac{q}{K_s\varepsilon_0}(N_D - N_A)\longrightarrow -x_p\leq x\leq x_n \\
+	0 \longrightarrow x\leq -x_p \cap x\geq x_n
+	\end{cases}
+\end{equation}
 
 \section{Crystal Structure}
 \begin{tabular}{@{}ll@{}}
