--- a/Lab4/Writeup.tex
+++ b/Lab4/Writeup.tex
@@ -15,20 +15,20 @@
 
 \begin{table}[H]
 \centering
-\begin{tabular}{|l|l|l|}
+\begin{tabular}{|c|c|c|}
 \hline
-Loop & $f_0$ & $\vert\Gamma^{\prime}_{in}\vert$ \\ \hline
-5 cm &  &  \\ \hline
-9 cm &  &  \\ \hline
+Loop & $f_0$ (MHz) & $\vert\Gamma^{\prime}_{in}\vert$ \\ \hline
+5 cm & 89.209 & 0.237 \\ \hline
+9 cm & 49.774 & 0.260 \\ \hline
 \end{tabular}
 \end{table}
 
 \subsection{Questions}
 
 \begin{enumerate}
-	\item 
-	\item 
-	\item 
+	\item Since $C \approx C^{\prime}l$, the longer, 9 cm, loop should have a greater capacitance.
+	\item Since $L = \mu r [ln \frac{32r}{d}-1.75]$ for shielded-loop resonators and $\mu$ and $d$ are constant between the loops, the loop with the larger radius, the 9 cm loop, should have a greater inductance.
+	\item Since $f_0 = \dfrac{\omega_0}{2\pi}$ and $\omega_0 = \dfrac{1}{\sqrt{LC}}$, the loop with the smaller $LC$ product will have a higher resonant frequency. Since the 5cm loop should have both a smaller $C$ and $L$, it should have a higher resonant frequency. This is confirmed by our experimental results as the 5 cm loop has a resonant frequency of 89.209 MHz compared to a resonant frequency of 49.774 MHz for the 9 cm loop.
 \end{enumerate}
 
 
@@ -37,11 +37,11 @@ Loop & $f_0$ & $\vert\Gamma^{\prime}_{in}\vert$ \\ \hline
 \subsection{Measured Data}
 \begin{table}[H]
 \centering
-\begin{tabular}{|l|l|l|l|}
+\begin{tabular}{|c|c|c|c|}
 \hline
 Loop & $\vert\Gamma^{\prime}_{in}\vert$ & $\vert\Gamma^{\prime}_{in}\vert$ at $f_0$ - 2MHz & $\vert\Gamma^{\prime}_{in}\vert$ at $f_0$ + 2MHz \\ \hline
-5 cm &  &  &  \\ \hline
-9 cm &  &  &  \\ \hline
+5 cm & 0.9735 & 0.9745 & 0.9744 \\ \hline
+9 cm & 0.9712 & 0.9745 & 0.9772 \\ \hline
 \end{tabular}
 \end{table}
 
