--- a/Cheatsheet/301Cheetsheet.tex
+++ b/Cheatsheet/301Cheetsheet.tex
@@ -125,23 +125,23 @@ $\sum^{\infty}_{k=0} kr^{k} = \dfrac{r}{(r-1)^2}$
 \setlength{\columnsep}{2pt}
 
 \begin{figure}[H]
-    \includegraphics[scale=0.46]{./Images/Airplanes.jpg}
+    \includegraphics[scale=0.46]{./Images/1/Airplanes.jpg}
 \end{figure}
 \begin{figure}[H]
-    \includegraphics[scale=0.46]{./Images/Communication.jpg}
+    \includegraphics[scale=0.46]{./Images/1/Communication.jpg}
 \end{figure}
 \begin{figure}[H]
-    \includegraphics[scale=0.46]{./Images/HammingCode.jpg}
+    \includegraphics[scale=0.46]{./Images/1/HammingCode.jpg}
 \end{figure}
 \begin{figure}[H]
-    \includegraphics[scale=0.46]{./Images/Seat1.jpg}
-    \includegraphics[scale=0.46]{./Images/Seat2.jpg}
+    \includegraphics[scale=0.46]{./Images/1/Seat1.jpg}
+    \includegraphics[scale=0.46]{./Images/1/Seat2.jpg}
 \end{figure}
 \begin{figure}[H]
-    \includegraphics[scale=0.46]{./Images/Cointoss.jpg}
+    \includegraphics[scale=0.46]{./Images/1/Cointoss.jpg}
 \end{figure}
 \begin{figure}[H]
-    \includegraphics[scale=0.8]{./Images/RandNumXKCD.jpg}
+    \includegraphics[scale=0.8]{./Images/1/RandNumXKCD.jpg}
 \end{figure}
 \end{multicols}
 
