--- a/Lab4/Writeup.tex
+++ b/Lab4/Writeup.tex
@@ -40,15 +40,19 @@ Loop & $f_0$ (MHz) & $\vert\Gamma^{\prime}_{in}\vert$ \\ \hline
 \begin{tabular}{|c|c|c|c|}
 \hline
 Loop & $\vert\Gamma^{\prime}_{in}\vert$ & $\vert\Gamma^{\prime}_{in}\vert$ at $f_0$ - 2MHz & $\vert\Gamma^{\prime}_{in}\vert$ at $f_0$ + 2MHz \\ \hline
-5 cm & 0.9735 & 0.9745 & 0.9744 \\ \hline
-9 cm & 0.9712 & 0.9745 & 0.9772 \\ \hline
+5 cm & 0.9735\angle 109.9\degree & 0.9745\angle 123.5\degree & 0.9744\angle 96.61\degree \\ \hline
+9 cm & 0.9712\angle 118.1\degree & 0.9745\angle 143.6\degree & 0.9772\angle 93.61\degree \\ \hline
 \end{tabular}
 \end{table}
 
 \subsection{Analysis}
 \begin{enumerate}
-	\item 
-	\item 
+	\item $\beta l$ 5cm line: $\dfrac{((123.5-109.9)+(109.9-96.61))}{2}= 13.45\degree = 0.2347$ \\
+		  $\beta l$ 9cm line: $\dfrac{((143.6-118.1)+(118.1-93.61))}{2}= 25.00\degree = 0.4362$ \\
+	\item $\beta l$ 5cm line at $f_0 - 2$MHz: $\beta l\frac{f_0 - 2}{f_0} = 0.225$\\
+		  $\beta l$ 5cm line at $f_0 + 2$MHz: $\beta l\frac{f_0 + 2}{f_0} = 0.244$\\
+		  $\beta l$ 9cm line at $f_0 - 2$MHz: $\beta l\frac{f_0 - 2}{f_0} = 0.426$\\
+		  $\beta l$ 9cm line at $f_0 + 2$MHz: $\beta l\frac{f_0 + 2}{f_0} = 0.446$\\
 	\item 
 	\item 
 	\item 
