--- a/Lab5/Writeup.tex
+++ b/Lab5/Writeup.tex
@@ -16,10 +16,10 @@
 \centering
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-Distance (cm)& $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$ (9 cm)     
-			 & $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$ (9 cm)
-			 & $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$ (5 cm)     
-			 & $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$ (5 cm) \\ \hline
+Distance (cm)& 9cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$     
+			 & 9cm $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$
+			 & 5cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$     
+			 & 5cm $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$ \\ \hline
 2   		 & $0.195\angle-72.83\degree$ & -0.199 & $0.032\angle150.4\degree$  & -1.42   \\ \hline
 4   	 	 & $0.324\angle115.8\degree$  & -0.682 & $0.575\angle109.5\degree$  & -1.847  \\ \hline
 6   	 	 & $0.604\angle114.3\degree$  & -2.52  & $0.847\angle109.0\degree$  & -5.954  \\ \hline
@@ -35,10 +35,10 @@ Distance (cm)& $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$ (9 cm)
 \centering
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-Distance (cm)	  & $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$ (9 cm)     
-			 	  & $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$ (9 cm)
-			 	  & $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$ (5 cm)     
-			      & $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$ (5 cm) \\ \hline
+Distance (cm)	  & 9cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$      
+			 	  & 9cm $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$ 
+			 	  & 5cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$      
+			      & 5cm $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$ \\ \hline
 5cm $(30\degree)$ & $0.646\angle115.4\degree$ & -3.19  & $0.802\angle109\degree$   & -5.471 \\ \hline
 5cm $(60\degree)$ & $0.893\angle112.4\degree$ & -8.521 & $0.903\angle109.4\degree$ & -9.555 \\ \hline
 \end{tabular}
@@ -46,8 +46,23 @@ Distance (cm)	  & $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$ (9 cm)
 \subsection{Analysis}
 
 \begin{enumerate}
-	\item
-	\item
+	\item Since $R_{in} = Z_0\dfrac{1 - \vert\Gamma '_{in}\vert}{1 + \vert\Gamma'_{in}\vert}$ at $\omega=\omega_0$,
+	\begin{table}[H]
+	\centering
+		\begin{tabular}{|c|c|c|}
+		\hline
+		Distance (cm) & 9cm $R_{in}$ $(\Omega)$ & 5cm $R_{in}$ $(\Omega)$ \\ \hline
+		2  & 33.682 & 46.899 \\ \hline
+		4  & 25.529 & 13.492 \\ \hline
+		6  & 12.344 & 4.142 \\ \hline
+		8  & 6.980 & 1.948 \\ \hline
+		10 & 4.259 & 1.520 \\ \hline
+		12 & 2.604 & 1.177 \\ \hline
+		14 & 1.948 & 0.994 \\ \hline
+		16 & 1.600 & 0.891 \\ \hline
+		\end{tabular}
+	\end{table}
+	\item Since $R_{in\vert\omega=\omega_0} = R_1 + \dfrac{(\omega_0M)^2}{R_2 + R_L}$, $M = \dfrac{\sqrt{(R_{in\vert\omega=\omega_0} - R_1)(R_2 + R_L)}}{\omega_0}$
 	\item
 	\item
 \end{enumerate}
